--- a/WingTest/WingTest.csproj
+++ b/WingTest/WingTest.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0EC96876-D643-459D-B6BF-397DF25DA089}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Csvier.Test</RootNamespace>
-    <AssemblyName>CsvierTest</AssemblyName>
+    <RootNamespace>Wing.Test</RootNamespace>
+    <AssemblyName>WingTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,13 +48,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClimaTest.cs" />
+    <Compile Include="ClimaTest\ClimaTest.cs" />
+    <Compile Include="CsvierTest\TestInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RequestTest\RequestTest.cs" />
+    <Compile Include="CsvierTest\CsvParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -74,6 +77,13 @@
       <Project>{de857858-8828-4bac-9c05-c5d38a5f3d05}</Project>
       <Name>Csvier</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Request\Request.csproj">
+      <Project>{74B49F1B-C790-4809-8488-1C97CF567995}</Project>
+      <Name>Request</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Text.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
