Part 1 almost complete. Tests are OK for ICalculator (if IRequest is commented at TestMockerCreateOnly()). Fails because is telling that Dispose() is not implemented when IRequest.

--- a/Mocky/Mocky.csproj
+++ b/Mocky/Mocky.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculator.cs" />
+    <Compile Include="Generator.cs" />
+    <Compile Include="ICalculator.cs" />
     <Compile Include="Mocker.cs" />
     <Compile Include="MockMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
