Part 5 -- Mocker and tests for IRequest (IHttpRequest), completed. Added option to define DEBUG mode in Generator to save DLLs generated. Fixed bug not generating returned types correctly for non primitive types.

--- a/MockyTest/MockyTest.csproj
+++ b/MockyTest/MockyTest.csproj
@@ -48,8 +48,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICalculator.cs" />
     <Compile Include="TestMockerCreateOnly.cs" />
+    <Compile Include="TestMockerForPartialResquest.cs" />
     <Compile Include="TestMockerForPartialCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMockMethod.cs" />
