--- a/CsvierGeneric/CsvierGeneric.csproj
+++ b/CsvierGeneric/CsvierGeneric.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Attributes\CsvAttribute.cs" />
     <Compile Include="Attributes\CsvAutoCreator.cs" />
     <Compile Include="CsvParserGeneric.cs" />
+    <Compile Include="Enumerator\LineEnumerable.cs" />
+    <Compile Include="Enumerator\LineEnumerator.cs" />
     <Compile Include="Exceptions\CsvExceptions.cs" />
     <Compile Include="KlassInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
